pipeline/acs/deploy-test/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: vote-app
    app.kubernetes.io/component: vote-app
    app.kubernetes.io/instance: vote-app
  name: vote-app
  namespace: vote-app-test
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: vote-app
    weight: 100
  wildcardPolicy: None
